--- a/megaempires-admin/package.json
+++ b/megaempires-admin/package.json
@@ -22,7 +22,7 @@
     "sqlite3": "^5.1.6",
     "ejs": "^3.1.9",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0"
   },
